---
config:
  theme: mc
---
classDiagram
    class InferenceConfig {
        +models: List~ModelConfig~
        +batch_size: int
    }
    class ModelConfig {
        +config_id: str
        +provider: str
        +model: str
        +parameters: Dict
    }
    class InferenceRequest {
        +request_id: str
        +prompt: str
        +system_prompt: Optional~str~
        +persona: Optional~str~
        +model_config_id: str
        +response_format: Optional~DictResponseFormat~
        +metadata: Dict
    }
    class DictResponseFormat {
        +fields: List~ResponseField~
        +include_comment: bool
        +include_type_hints: bool
    }
    class ResponseField {
        +name: str
        +value_type: str
        +description: str
    }
    class RenderedPrompt {
        +request_id: str
        +user_prompt: str
        +system_prompt: Optional~str~
    }
    class InferenceBatchPreview {
        +batch_number: int
        +total_batches: int
        +prompts: List~RenderedPrompt~
    }
    class InferenceBatchResult {
        +batch_number: int
        +total_batches: int
        +elapsed_seconds: float
        +results: List~InferenceResult~
    }
    class InferenceResult {
        +request_id: str
        +model_config_id: str
        +content: Optional~str~
        +structured_content: Optional~Dict~
        +comment: Optional~str~
        +token_logprobs: List~TokenLogprob~
        +rendered_prompt: Optional~RenderedPrompt~
        +metadata: Dict
        +error: Optional~InferenceError~
    }
    class TokenLogprob {
        +token: str
        +logprob: float
    }
    class InferenceError {
        +type: str
        +message: str
    }
    class InferenceOrchestrator {
        -adapter: InferenceAdapter
        +preview_batch(requests: List~InferenceRequest~, config: InferenceConfig, batch_number: int) InferenceBatchPreview
        +run_batches(requests: List~InferenceRequest~, config: InferenceConfig) Iterator~InferenceBatchResult~
        +run_batches_async(requests: List~InferenceRequest~, config: InferenceConfig) AsyncIterator~InferenceBatchResult~
    }
    class InferenceAdapter {
        <<Protocol>>
        +render_batch(requests: List~InferenceRequest~, models: Dict~str, ModelConfig~) List~RenderedPrompt~
        +execute_batch(requests: List~InferenceRequest~, models: Dict~str, ModelConfig~) List~InferenceResult~
        +execute_batch_async(requests: List~InferenceRequest~, models: Dict~str, ModelConfig~) List~InferenceResult~
    }
    class EDSLAdapter {
        -group_requests(requests: List~InferenceRequest~)
        +render_batch(requests: List~InferenceRequest~, models: Dict~str, ModelConfig~) List~RenderedPrompt~
        +execute_batch(requests: List~InferenceRequest~, models: Dict~str, ModelConfig~) List~InferenceResult~
        +execute_batch_async(requests: List~InferenceRequest~, models: Dict~str, ModelConfig~) List~InferenceResult~
    }
    class EDSL {
        <<Expected Parrot>>
        +run()
        +run_async()
    }
    class EDSLJob {
        <<Expected Parrot>>
        +one_shared_agent
        +request_scenarios
        +single_model
        +single_response_format
    }
    class EDSLAgent {
        <<Expected Parrot>>
        +instruction
        +persona
    }
    class EDSLScenario {
        <<Expected Parrot>>
        +request_id
        +prompt
    }
    class EDSLInterview {
        <<Expected Parrot>>
        +agent
        +scenario
    }
    InferenceConfig --> ModelConfig
    InferenceRequest --> DictResponseFormat
    DictResponseFormat --> ResponseField
    InferenceOrchestrator --> InferenceConfig : validates and batches
    InferenceOrchestrator --> InferenceRequest : preserves identity
    InferenceOrchestrator --> InferenceBatchPreview : previews
    InferenceBatchPreview --> RenderedPrompt
    InferenceOrchestrator --> InferenceBatchResult : yields sequentially
    InferenceBatchResult --> InferenceResult
    InferenceResult --> RenderedPrompt
    InferenceResult --> TokenLogprob
    InferenceResult --> InferenceError
    InferenceOrchestrator --> InferenceAdapter : delegates batches
    EDSLAdapter ..|> InferenceAdapter : implements
    EDSLAdapter --> ModelConfig : configures
    EDSLAdapter --> EDSLJob : creates compatible group
    EDSLJob --> EDSLAgent : one shared
    EDSLJob --> EDSLScenario : one per request
    EDSLJob --> EDSLInterview : one per scenario
    EDSLInterview --> EDSLAgent : shared
    EDSLInterview --> EDSLScenario : request
    EDSLAdapter --> EDSL : submits compatible groups
